# client_p2p

./: .gitignore  CMakeLists.txt  Crypto.cpp  Crypto.h  NetworkManager.cpp  NetworkManager.h  Node.cpp  Node.h  main.cpp
console/: CMakeLists.txt  UserInputCollector.cpp  UserInputCollector.h  main_console.cpp
core/: CMakeLists.txt  Crypto.cpp  NetworkManager.h  Node.cpp  Node.h
core/contact/: Contact.cpp  Сontact.h
core/crypto/: Crypto.cpp  Crypto.h
core/nm/: NetworkManager.cpp  NetworkManager.h
core/node/: Node.cpp  Node.h
core/serialization/: Serialization.cpp  Serialization.h
core/thread_pool/: ThreadPool.cpp  ThreadPool.h
core/tor_work/: Torw.cpp  Torw.h
core/utils/: Utils.cpp  Utils.h
gui/desktop/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main_desktop.cpp
